# matcomp

./: README.md  pyproject.toml
.github/workflows/: publish.yml  pypi.yml
matcomp/: __init__.py
